# sam-prompt-activation-mapping

./: .gitignore  README.md  contents_prompt.md  pyproject.toml
examples/: run_sam3_pam.sh
src/pam/: __init__.py  __main__.py  attention_capture.py  cli.py  debug_utils.py  effective_attention.py  sam3_loader.py  tokenization.py  visualization.py
tests/: test_effective_attention.py  test_heatmap_shapes.py
