[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pam"
version = "0.1.0"
description = "Prompt Activation Mapping for SAM 3 – cross-attention and effective-attention heatmaps"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "torch>=2.7",
    "torchvision",
    "Pillow",
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
